update route upload routes and Database structure
